--- a/static/sass/_admin.scss
+++ b/static/sass/_admin.scss
@@ -309,6 +309,18 @@
             border-color: $orange;
             box-shadow: 0px 5px 5px rgba(100,100,100,0.5);
         }
+        &.cho{
+            height: 355px;
+            .chooseThis{
+                border: none;
+                clear: both;
+                width: 100%;
+                height: 30px;
+                line-height: 30px;
+                text-align: center;
+                background-color: #f8f8f8;
+            }
+        }
     }
 }
 /* 编辑 */
