--- a/static/sass/_admin.scss
+++ b/static/sass/_admin.scss
@@ -503,3 +503,80 @@
         }
     }
 }
+/*付费模块*/
+.payment{
+    padding: 0px 100px;
+    .p_item{
+        height: 30px;
+        line-height: 30px;
+        margin-bottom: 10px;
+        font-size: 16px;
+        span:first-child{
+            display: inline-block;
+            width: 80px;
+        }
+        input{
+            height: 30px;
+            border: 1px solid #eee;
+            padding: 0px 10px;
+            font-size: 16px;
+            color: $orange;
+        }
+        .danwei{
+            color: $baseColor;
+            em{
+                font-style: normal;
+                color: #ff0000;
+                font-size: 14px;
+            }
+        }
+    }
+}
+.dopay{
+    clear: both;
+    overflow: hidden;
+    border: 1px solid #eee;
+    width: 954px;
+    padding: 0px 10px;
+    margin: 30px 0px;
+    .head{
+        text-align: center;
+        font-size: 20px;
+        height: 40px;
+        line-height: 40px;
+        font-weight: bold;
+        color: #999;
+    }
+    .code{
+        clear: both;
+        overflow: hidden;
+        .halfCode{
+            width: 50%;
+            text-align: center;
+            float: left;
+            .codeBox{
+                display: inline-block;
+                width: 150px;
+                height: 150px;
+                overflow: hidden;
+                border: 1px solid #eee;
+                border-radius: 3px;
+                padding: 5px;
+                img{
+                    width: 100%;
+                }
+            }
+        }
+    }
+    .countMoney{
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        font-size: 20px;
+        em{
+            font-size: 30px;
+            font-style: normal;
+            color: $orange;
+        }
+    }
+}
