--- a/static/sass/_admin.scss
+++ b/static/sass/_admin.scss
@@ -580,3 +580,12 @@
         }
     }
 }
+.gongsijieshao{
+    width: 970px;
+    box-sizing: border-box;
+    padding: 10px;
+    border: 1px solid #eee;
+    height: 200px;
+    resize: none;
+    border-radius: 5px;
+}
